自定義部分子頁面

--- a/framework/baykeshop/templates/baykeshop/base.html
+++ b/framework/baykeshop/templates/baykeshop/base.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}-baykeShop</title>
-    <meta name="description" content="{% block meta_desc %}baykeshop商城系统，python栈开源前后端分离商城系统{% endblock %}">
-    <meta name="keywords" content="{% block meta_kw %}baykeshop商城系统, drf商城, django商城, python开源商城{% endblock %}">
+    <title>{% block title %}{% endblock %}-OpenShop</title>
+    <meta name="description" content="{% block meta_desc %}OpenShop 一個開放式論壇的商城{% endblock %}">
+    <meta name="keywords" content="{% block meta_kw %}OpenShop{% endblock %}">
     <link rel="stylesheet" href="{% block stylesheet %}{% static "baykeshop/css/buefy.min.css" %}{% endblock %}">
     <link rel="stylesheet" href="{% static 'baykeshop/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'baykeshop/css/materialdesignicons.min.css' %}">
