--- a/framework/baykeshop/templates/baykeshop/index.html
+++ b/framework/baykeshop/templates/baykeshop/index.html
@@ -3,7 +3,7 @@
 {% load static bayketags %}
 
 {% block title %}
-    全开源Python django商城系统，拜客商城系统！
+    OpenShop 開放論壇平台 !
 {% endblock %}   
 
 {% block banners %}
