自定義 product & user

--- a/framework/baykeshop/templates/baykeshop/product/detail.html
+++ b/framework/baykeshop/templates/baykeshop/product/detail.html
@@ -37,12 +37,12 @@
             <div class="box is-marginless is-radiusless has-background-primary-dark has-text-white-ter">
                 <div class="is-flex is-justify-content-space-between is-align-items-center">
                     <div>
-                        <span class="is-size-7"> 原价：¥ <del>{$ sku.cost_price $}</del></span>
+                        <span class="is-size-7"> 原價：$ <del>{$ sku.cost_price $}</del></span>
                         <h1 class="is-size-4">¥ {$ sku.price $}</h1>
                     </div>
                     <div class=" has-text-centered">
                         {$ sku.sales $}
-                        <h1>销量</h1>
+                        <h1>銷量</h1>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
 
                 <!-- 数量 -->
                 <div class=" is-flex is-align-items-center mt-3">
-                    <div class=" has-text-grey-light">数量：</div>
+                    <div class=" has-text-grey-light">數量：</div>
                     <div>
                         <b-numberinput 
                             controls-position="compact" 
@@ -76,7 +76,7 @@
                             :editable="false">
                         </b-numberinput> 
                     </div>
-                    <div class=" has-text-grey-dark ml-3">(库存{$ stock $})</div>
+                    <div class=" has-text-grey-dark ml-3">(庫存{$ stock $})</div>
                 </div>
                 <!-- 数量end -->
 
@@ -88,14 +88,14 @@
                     type="is-primary"
                     @click="addCart"
                     :disabled="stock ? false : true">
-                    加入购物车
+                    加入購物車
                 </b-button>
                 <b-button 
                     type="is-primary" 
                     :disabled="stock ? false : true"
                     @click="nowBuy"
                     outlined>
-                    立即购买
+                    立即購買
                 </b-button>
             </div>
             <!-- 加入购物车按钮及一键购买 -->
@@ -110,9 +110,9 @@
                     </b-tab-item>
                     <b-tab-item label="商品评价">
                         <div class="is-flex is-justify-content-space-between p-2">
-                            <div class="">满意度：{{ rate }}%</div>
+                            <div class="">滿意度：{{ rate }}%</div>
                             <div class="is-flex is-align-items-center">
-                                <span> 评分：</span>
+                                <span> 評分：</span>
                                 <b-rate 
                                     :value="{{ score }}" 
                                     disabled 
@@ -138,7 +138,7 @@
                                 </div>
                             </article>
                         {% empty %}
-                            <p class=" has-text-centered has-text-danger mt-6">还没有任何评价内容哦！</p>
+                            <p class=" has-text-centered has-text-danger mt-6">還沒有任何評價！</p>
                         {% endfor %}
                     </b-tab-item>
                     <b-tab-item label="售后服务">
@@ -153,7 +153,7 @@
 
     <div class="column is-2">
         {% spuhots as spus %}
-        <h1 class="has-text-centered has-background-white pt-3 is-size-6 pb-3 has-text-weight-bold">热销排行</h1>
+        <h1 class="has-text-centered has-background-white pt-3 is-size-6 pb-3 has-text-weight-bold">熱銷排行</h1>
         <div class=" dropdown-divider is-marginless"></div>
         {% for spu in spus %}
             <div class="has-background-white">
@@ -230,12 +230,12 @@
                         }
                     }).then(res => {
                         if (res.status == 403){
-                            bayke.toastMessage("is-danger", "未登录，请登录后操作！")
+                            bayke.toastMessage("is-danger", "未登入！請登入後操作。")
                             return
                         }
                         if (res.status == 201) {
                             bayke._data.cartcount += this.num
-                            bayke.toastMessage('is-success', '加入购物车成功')
+                            bayke.toastMessage('is-success', '加入購物車成功！')
                         }
                     })
                 },
