--- a/framework/baykeshop/templates/baykeshop/user/comp/address.html
+++ b/framework/baykeshop/templates/baykeshop/user/comp/address.html
@@ -30,14 +30,14 @@
                         {% if update %}
                         <div class="button is-success is-light is-small" @click="updateAddress(addr)">
                             <span class="icon"><i class="mdi mdi-book-edit-outline"></i></span>
-                            <span>编辑</span> 
+                            <span>編輯</span> 
                         </div>
                         {% endif %}
 
                         {% if delete %}
                         <div class="button is-danger is-light is-small" @click="delAddress(addr.id)">
                             <span class="icon"><i class="mdi mdi-delete-alert-outline"></i></span>
-                            <span>删除</span> 
+                            <span>刪除</span> 
                         </div>
                         {% endif %}
                     </div>
@@ -54,7 +54,7 @@
             <div class="add-box is-clickable is-flex is-flex-direction-column is-align-items-center is-justify-content-center" 
                 @click="openModal">
                 <span class="icon is-size-1 has-text-grey-light"><i class="mdi mdi-plus"></i></span>
-                <p class="mt-3 has-text-grey-light">添加新地址</p>
+                <p class="mt-3 has-text-grey-light">新增新地址</p>
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
         template: `
             <div class="modal-card" style="min-width: 200px">
                 <header class="modal-card-head">
-                    <p class="modal-card-title">收货地址</p>
+                    <p class="modal-card-title">收貨地址</p>
                 </header>
                 <section class="modal-card-body">
                     <b-field label="收件人" :label-position="labelPosition">
@@ -101,7 +101,7 @@
                         </b-input>
                     </b-field>
 
-                    <b-field label="手机号" :label-position="labelPosition">
+                    <b-field label="手機號碼" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.phone"
                             type="text"
@@ -110,11 +110,11 @@
                             :hasCounter="false"
                             :maxlength="11"
                             pattern="[1][3,4,5,7,8,9][0-9]{9}"
-                            validation-message="手机号格式有误！"
+                            validation-message="手機號碼格式錯誤"
                             required>
                         </b-input>
                     </b-field>
-                    <b-field label="省份" :label-position="labelPosition">
+                    <b-field label="國家" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.province"
                             type="text"
@@ -123,7 +123,7 @@
                             required>
                         </b-input>
                     </b-field>
-                    <b-field label="城市" :label-position="labelPosition">
+                    <b-field label="縣/市" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.city"
                             type="text"
@@ -132,7 +132,7 @@
                             required>
                         </b-input>
                     </b-field>
-                    <b-field label="区/县" :label-position="labelPosition">
+                    <b-field label="區" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.county"
                             type="text"
@@ -141,7 +141,7 @@
                             required>
                         </b-input>
                     </b-field>
-                    <b-field label="详细地址" :label-position="labelPosition">
+                    <b-field label=路/街/號" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.address"
                             type="text"
@@ -150,14 +150,14 @@
                             required>
                         </b-input>
                     </b-field>
-                    <b-checkbox v-model="formProps.is_default" :value="formProps.is_default">设为默认</b-checkbox>
+                    <b-checkbox v-model="formProps.is_default" :value="formProps.is_default">設為預設</b-checkbox>
                 </section>
                 <footer class="modal-card-foot">
                     <b-button
                         label="取消"
                         @click="$parent.close()" />
                     <b-button
-                        label="保存"
+                        label="儲存"
                         type="is-primary"
                         @click="save"/>
                 </footer>
@@ -184,7 +184,7 @@
                         this.$parent.close()
                         location.reload()
                     }else{
-                        bayke.toastMessage('is-danger', '失败')
+                        bayke.toastMessage('is-danger', '失敗')
                     }
                 })
             },
@@ -201,7 +201,7 @@
         },
         data: {
             addressData: [],
-            text: "默认",
+            text: "預設",
             isComponentModalActive: false,
             formProps: {},
             isLoading: false
@@ -231,7 +231,7 @@
                 this.addressData.forEach(element => {
                     if (addr.id == element.id){
                         addr.is_default = true
-                        this.text = "选择 ✔"
+                        this.text = "選擇 ✔"
                     }else{
                         element.is_default = false
                     }
@@ -253,7 +253,7 @@
             // delAddress删除
             delAddress(id){
                 this.$buefy.dialog.confirm({
-                    message: '是否确认删除该地址！',
+                    message: '是否確認刪除該地址！',
                     cancelText: '取消',
                     onConfirm: () => {
                         request({
@@ -263,10 +263,10 @@
                         }).then(res => {
                             console.log(res)
                             if (res.status == 204 || res.status == 200) {
-                                bayke.toastMessage('is-success', '删除成功！')
+                                bayke.toastMessage('is-success', '刪除成功！')
                                 location.reload()
                             }else{
-                                bayke.toastMessage('is-danger', '失败')
+                                bayke.toastMessage('is-danger', '失敗')
                             }
                         })
                     }
