--- a/framework/baykeshop/templates/baykeshop/user/comp/userinfo.html
+++ b/framework/baykeshop/templates/baykeshop/user/comp/userinfo.html
@@ -3,13 +3,13 @@
     {{ email|json_script:"email-data" }}
     {{ baykeuser|json_script:"baykeuserinfo-data" }}
     <div class="columns is-align-items-center is-marginless">
-        <div class="column is-2 has-text-grey-light">用户名</div>
+        <div class="column is-2 has-text-grey-light">用戶名稱</div>
         <div class="column">{{ request.user.username }}</div>
     </div>
     <div class="dropdown-divider is-marginless"></div>
 
     <div class="columns is-align-items-center is-marginless">
-        <div class="column is-2 has-text-grey-light">手机号</div>
+        <div class="column is-2 has-text-grey-light">手機號碼</div>
         <div class="column is-flex is-justify-content-space-between is-align-items-center" id="phone">
             <p v-if="!editphone">{$ baykeuserinfo.phone $}</p>
             <div>
@@ -26,7 +26,7 @@
     <div class="dropdown-divider is-marginless"></div>
 
     <div class="columns is-align-items-center is-marginless">
-        <div class="column is-2 has-text-grey-light">邮箱</div>
+        <div class="column is-2 has-text-grey-light">電子郵件</div>
         <div class="column is-flex is-justify-content-space-between is-align-items-center">
             <p v-if="!editemail">{$ email $}</p>
             <div>
@@ -45,7 +45,7 @@
     <div class="dropdown-divider is-marginless"></div>
 
     <div class="columns is-align-items-center is-marginless">
-        <div class="column is-2 has-text-grey-light">余额</div>
+        <div class="column is-2 has-text-grey-light">餘額</div>
         <div class="column is-flex is-justify-content-space-between is-align-items-center">
             <p>¥ {{ request.user.baykeuser.balance }}</p>
             <!-- <p>
@@ -59,7 +59,7 @@
     <div class="dropdown-divider is-marginless"></div>
 
     <div class="columns is-align-items-center is-marginless">
-        <div class="column is-2 has-text-grey-light">个人简介</div>
+        <div class="column is-2 has-text-grey-light">個人簡介</div>
         <div class="column is-flex is-justify-content-space-between is-align-items-center">
             <p v-if="!editedesc">{$ baykeuserinfo.desc $}</p>
             <div class=" is-flex-grow-1 mr-5">
@@ -129,7 +129,7 @@
                     data: data
                 }).then(res => {
                     if (res.status == 200){
-                        bayke.toastMessage('is-success', '修改成功！')
+                        bayke.toastMessage('is-success', '修改成功')
                     }else if (res.status == 400){
                         if (!this.editphone){
                             this.editphone = true
