--- a/framework/baykeshop/templates/flatpages/default.html
+++ b/framework/baykeshop/templates/flatpages/default.html
@@ -8,7 +8,7 @@
 <div class="container">
   <nav class="breadcrumb is-marginless mt-3 mb-3 is-small" aria-label="breadcrumbs">
     <ul>
-      <li><a href="{% url 'baykeshop:home' %}">首页</a></li>
+      <li><a href="{% url 'baykeshop:home' %}">首頁</a></li>
       <li class="is-active"><a href="#" aria-current="page">{{ flatpage.title }}</a></li>
     </ul>
   </nav>
@@ -22,7 +22,7 @@
       <div class="box is-radiusless is-shadowless" style="height: 100%;">
         <aside class="menu">
           {% get_flatpages '/about/' as about_pages %}
-          <p class=" menu-label">关于我们</p>
+          <p class=" menu-label">關於我們</p>
           <ul class="menu-list">
             {% for page in about_pages %}
             <li><a class="{% if page.url in request.path %} is-active {% endif %}" href="/pages{{ page.url }}">{{ page.title }}</a></li>
@@ -36,14 +36,14 @@
             {% endfor %}
           </ul>
           {% get_flatpages '/serve/' as serve_pages %}
-          <p class=" menu-label">售后服务</p>
+          <p class=" menu-label">售後服務</p>
           <ul class="menu-list">
             {% for page in serve_pages %}
             <li><a class="{% if page.url in request.path %} is-active {% endif %}" href="/pages{{ page.url }}">{{ page.title }}</a></li>
             {% endfor %}
           </ul>
           {% get_flatpages '/faq/' as faq_pages %}
-          <p class=" menu-label">常见问题</p>
+          <p class=" menu-label">常見問題</p>
           <ul class="menu-list">
             {% for page in faq_pages %}
             <li><a class="{% if page.url in request.path %} is-active {% endif %}" href="/pages{{ page.url }}">{{ page.title }}</a></li>
