修正缺改項目

--- a/framework/baykeshop/templates/baykeshop/payok.html
+++ b/framework/baykeshop/templates/baykeshop/payok.html
@@ -57,7 +57,7 @@
 
 <div class="box is-radiusless">
     <div class=" buttons is-justify-content-center">
-    <a class=" button is-success" href="{% url 'baykeshop:menmber-orders-retrieve' id %}">查看订单</a>
+    <a class=" button is-success" href="{% url 'baykeshop:menmber-orders-retrieve' id %}">查看訂單</a>
     <a class=" button is-black" href="{% url 'baykeshop:home' %}">返回首頁</a>
     </div>
 </div>
