新增三本測試商品

--- a/framework/baykeshop/templates/baykeshop/cart.html
+++ b/framework/baykeshop/templates/baykeshop/cart.html
@@ -106,7 +106,7 @@
     <div class="has-text-centered has-text-danger is-size-5" v-else> 
         <img src="{% static 'baykeshop/img/noCart1.png' %}">
         <p>購物車還是空的 (；′⌒`)</p>
-        <a class=" button is-primary is-outlined mt-4" href="{% url 'baykeshop:home' %}">继 续 逛</a>
+        <a class=" button is-primary is-outlined mt-4" href="{% url 'baykeshop:home' %}">繼續瀏覽</a>
     </div>
 
 </div>
