--- a/framework/baykeshop/templates/baykeshop/comp/spubox.html
+++ b/framework/baykeshop/templates/baykeshop/comp/spubox.html
@@ -1,4 +1,4 @@
-<figure class="image is-1by1">
+<figure class="image is-2by3">
     <a href="{% url 'baykeshop:product-retrieve' spu.id %}"><img src="{{ spu.pic.url }}" alt="{{ spu.title }}"></a>
 </figure>
 <div class="is-flex-grow-1 is-flex is-flex-direction-column is-justify-content-center">
@@ -8,7 +8,7 @@
 </div>
 <div class="pl-2 pr-2 pb-2">
     <div class="is-flex is-align-items-center is-justify-content-space-between">
-        <span class="is-size-5 has-text-danger-dark">¥{{ spu.price }}</span>
+        <span class="is-size-5 has-text-danger-dark">${{ spu.price }}</span>
         <span class="tag is-danger is-light is-size-7">券</span>
     </div>
     <div class="is-flex is-align-items-center is-justify-content-space-between">
