--- a/framework/baykeshop/templates/baykeshop/comp/navbar.html
+++ b/framework/baykeshop/templates/baykeshop/comp/navbar.html
@@ -1,66 +1,80 @@
 <div id="navbar">
-    <template>
-        <b-navbar spaced shadow transparent wrapper-class="{% block navclass %}container{% endblock %}">
-            <template #brand>
-                <b-navbar-item tag="div">
-                    {% block navbar_logo %}
-                    <h1 class="is-size-4 has-text-weight-medium">{{ pc_logo }}</h1>
-                    {% endblock %} 
-                </b-navbar-item>
-            </template>
-            <template #start>
-                {% block navbar_start %}
-                <b-navbar-item href="{% url 'baykeshop:home' %}">
-                    首页
-                </b-navbar-item>
-                <b-navbar-item href="{% url 'baykeshop:goods' %}">
-                    全部分类
-                </b-navbar-item>
-                <b-navbar-item href="{% url 'baykeshop:article-list-pc' %}">
-                    商城资讯
-                </b-navbar-item>
-                {% for cate in navs %}
-                <b-navbar-dropdown label="{{ cate.name }}">
-                    {% for sub_cate in cate.sub_cates %}
-                    <b-navbar-item href="{% url 'baykeshop:cate-detail' sub_cate.id %}">
-                        {{ sub_cate.name }}
-                    </b-navbar-item>
-                    {% endfor %}
-                </b-navbar-dropdown>
-                {% endfor %}
-                {% endblock %}             
-            </template>
-    
-            <template #end>
-                {% block navbar_end %}
-                <b-navbar-item tag="div">
-                    <form action="{% url 'baykeshop:search' %}" method="get">
-                        <div class="field-body">
-                          <div class="field is-expanded">
-                            <div class="field has-addons">
-                              <p class="control is-expanded has-icons-left">
-                                <input class="input" type="search" name="search" id="id_search" value="{{ word }}" placeholder="{{ placeholder }}" maxlength="32">
-                                <span class="icon is-left">
-                                    <i class="mdi mdi-magnify"></i>
-                                </span>
-                              </p>
-                              <p class="control has-icons-right">
-                                <input class="button is-primary" type="submit" value="搜索">
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                    </form>
-                </b-navbar-item>
-                {% endblock %} 
-            </template>
-        </b-navbar>
-    </template>
+  <template>
+    <b-navbar
+      spaced
+      shadow
+      transparent
+      wrapper-class="{% block navclass %}container{% endblock %}"
+    >
+      <template #brand>
+        <b-navbar-item tag="div">
+          {% block navbar_logo %}
+          <h1 class="is-size-4 has-text-weight-medium">{{ pc_logo }}</h1>
+          {% endblock %}
+        </b-navbar-item>
+      </template>
+      <template #start>
+        {% block navbar_start %}
+        <b-navbar-item href="{% url 'baykeshop:home' %}"> 首頁 </b-navbar-item>
+        <b-navbar-item href="{% url 'baykeshop:goods' %}">
+          全部分類
+        </b-navbar-item>
+        <b-navbar-item href="{% url 'baykeshop:article-list-pc' %}">
+          商城資訊
+        </b-navbar-item>
+        {% for cate in navs %}
+        <b-navbar-dropdown label="{{ cate.name }}">
+          {% for sub_cate in cate.sub_cates %}
+          <b-navbar-item href="{% url 'baykeshop:cate-detail' sub_cate.id %}">
+            {{ sub_cate.name }}
+          </b-navbar-item>
+          {% endfor %}
+        </b-navbar-dropdown>
+        {% endfor %} {% endblock %}
+      </template>
+
+      <template #end>
+        {% block navbar_end %}
+        <b-navbar-item tag="div">
+          <form action="{% url 'baykeshop:search' %}" method="get">
+            <div class="field-body">
+              <div class="field is-expanded">
+                <div class="field has-addons">
+                  <p class="control is-expanded has-icons-left">
+                    <input
+                      class="input"
+                      type="search"
+                      name="search"
+                      id="id_search"
+                      value="{{ word }}"
+                      placeholder="{{ placeholder }}"
+                      maxlength="32"
+                    />
+                    <span class="icon is-left">
+                      <i class="mdi mdi-magnify"></i>
+                    </span>
+                  </p>
+                  <p class="control has-icons-right">
+                    <input
+                      class="button is-primary"
+                      type="submit"
+                      value="搜索"
+                    />
+                  </p>
+                </div>
+              </div>
+            </div>
+          </form>
+        </b-navbar-item>
+        {% endblock %}
+      </template>
+    </b-navbar>
+  </template>
 </div>
 
 <script>
-    var navbar = new Vue({
-        el: '#navbar',
-        delimiters: ['{$', '$}']
-    })
+  var navbar = new Vue({
+    el: "#navbar",
+    delimiters: ["{$", "$}"],
+  });
 </script>
